# ai-group-chats

./: .gitignore  README.md
group_in_one_room_with_ai/: .gitignore  README.md  example_biased_friend.json  example_conversation.json  example_debate.json  publication.md  pyproject.toml
group_in_one_root_with_ai/: chat_agent.py  example_emotional.json  example_judge.json  main.py  publication.md
groups_in_multiple_rooms_with_ai/: .gitignore  README.md  chat_agent.py  example_biased_friend.json  example_changing_stories.json  example_promotion_competition.json  example_surprise_party.json  example_workplace_gossip.json  main.py  pyproject.toml
