[project]
name = "group-chat-ai-agent"
version = "0.1.0"
description = "AI agent that listens to group conversations and can respond"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["chat_agent.py", "main.py"]

[tool.uv]
dev-dependencies = []
